<resources>
    <string name="app_name">GameCenter</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="game2048">2048</string>
    <string name="senku">Senku</string>
    <string name="juegos">Select a game!</string>
    <string name="settings">Settings</string>
    <string name="title_activity_game2048">game2048</string>
    <string name="title_activity_game_senku">gameSenku</string>
    <string name="amazing_games">AmazingGames</string>
    <string name="games">2048 and Senku</string>
    <string name="games_text">SELECT A GAME!</string>
    <string name="presents">presents:</string>
    <string name="version">Version 9.2.1</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_senku_game_over">senkuGameOver</string>
    <string name="score">SCORE</string>
    <string name="_0">0</string>
    <string name="game_over">GAME OVER</string>
    <string name="title_activity_2048_game_over">g2048GameOver</string>
    <string name="senku_caps">SENKU</string>
    <string name="best_score">BEST SCORE</string>
    <string name="_0_moves">0 Moves</string>
    <string name="new_game">New Game</string>
    <string name="best_score_title">BEST</string>
    <string name="phrase_2048">Join the numbers and get to the 2048 tile!</string>
    <string name="text_view">TextView</string>
    <string name="title_main_settings_activity">MainSettingsActivity</string>

    <string-array name="numbers">
        <item>2</item>
        <item>4</item>
        <item>8</item>
        <item>16</item>
        <item>32</item>
        <item>64</item>
        <item>128</item>
        <item>256</item>
        <item>512</item>
        <item>1024</item>
        <item>2048</item>
    </string-array>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username (Max 5 characters)</string>
    <string name="enter_user_name">Enter your username</string>
    <string name="accept">Accept</string>
    <string name="welcome_username">Welcome, </string>
    <string name="senku_comment">Go for it,</string>
    <string name="both">Both</string>
    <string name="select_button">Select a game</string>
    <string name="asc">ASC</string>
    <string name="desc">DESC</string>
    <string name="show">Show</string>
    <string name="select_sorting_type">Select a sorting type</string>
</resources>