<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".menu.SignUpActivity">

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xl"
        android:text="@string/enter_user_name"
        android:textColor="@color/background_newgame"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xl"
        android:autofillHints="username"
        android:hint="@string/username"
        android:maxLength="5"
        android:textColor="@color/background_newgame"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bt_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xl"
        android:backgroundTint="@color/background_newgame"
        android:text="@string/accept" />


</LinearLayout>