<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SplashActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/spacing">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="bottom|center"
            android:text="@string/amazing_games"
            android:textColor="@color/background_newgame"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/presents_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/presents"
            android:textColor="@color/background_newgame"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/logo_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/games_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="top|center"
            android:text="@string/games"
            android:textColor="@color/background_newgame"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/version_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/version"
            android:textColor="@color/background_newgame" />

    </LinearLayout>
</androidx.wear.widget.BoxInsetLayout>