<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".settings.MainSettingsActivity">

    <TextView
        android:id="@+id/tv_settings_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_xl"
        android:text="@string/welcome"
        android:textColor="@color/background_newgame"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ll_checks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xl"
            android:layout_weight="1"
            android:text="@string/game2048"
            android:textColor="@color/background_newgame"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/senku"
            android:textColor="@color/background_newgame"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/spacing_xl"
            android:layout_weight="2" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scores_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />


</LinearLayout>