<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".senku.GameSenkuActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="135dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/score"
            android:layout_margin="@dimen/spacing"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/senku_score_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/peg"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/score_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/best_score"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/score_value"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/score_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="0"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/score_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/peg"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/spacing"
            android:background="@drawable/senku_peg_bg"
            android:gravity="center"
            android:text="@string/senku_caps"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridView
        android:id="@+id/grid_view_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/senku_table_bg"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="@dimen/spacing"
        android:gravity="center"
        android:horizontalSpacing="@dimen/spacing"
        android:numColumns="7"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:verticalSpacing="@dimen/spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <TextView
        android:id="@+id/move_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing"
        android:layout_marginTop="@dimen/spacing"
        android:text="@string/_0_moves"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_view_board" />

    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing"
        android:layout_marginEnd="@dimen/spacing"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grid_view_board" />

</androidx.constraintlayout.widget.ConstraintLayout>